test: add more libs
Benchmark                                     Mode  Cnt       Score       Error   Units
Compare001Benchmark.test00New                thrpt    5  217385.467 ± 60086.838  ops/ms
Compare001Benchmark.test01BeeOP              thrpt    5   24874.982 ± 25649.876  ops/ms
Compare001Benchmark.test02BeeOP              thrpt    5   16083.405 ±  3427.594  ops/ms
Compare001Benchmark.test03CommonsPool        thrpt    5    2409.313 ±   895.883  ops/ms
Compare001Benchmark.test04CommonsPool        thrpt    5     912.576 ±   118.534  ops/ms
Compare001Benchmark.test05CommonsPool        thrpt    5    4032.854 ±  1310.769  ops/ms
Compare001Benchmark.test06CommonsPool2       thrpt    5    1743.647 ±    96.596  ops/ms
Compare001Benchmark.test07CommonsPool2       thrpt    5      47.424 ±    10.471  ops/ms
Compare001Benchmark.test08ERASOFTPool        thrpt    5    6994.557 ±   694.875  ops/ms
Compare001Benchmark.test09FrogspawnPool      thrpt    5  122989.510 ± 14846.600  ops/ms
Compare001Benchmark.test10GOPool             thrpt    5    5180.107 ±   191.265  ops/ms
Compare001Benchmark.test11KBPool             thrpt    5    2516.949 ±   185.592  ops/ms
Compare001Benchmark.test12LitePool           thrpt    5     334.059 ±    87.660  ops/ms
Compare001Benchmark.test13StormPotBlazePool  thrpt    5   86080.892 ±  6627.553  ops/ms
Compare001Benchmark.test14StormPotQueuePool  thrpt    5    4646.546 ±   471.705  ops/ms
Compare001Benchmark.test15ViburPool          thrpt    5    3960.165 ±   223.185  ops/ms

--- a/pom.xml
+++ b/pom.xml
@@ -114,11 +114,25 @@
             <version>1.2.8</version>
             <scope>test</scope>
         </dependency>
+        <!-- compare: commons-pool -->
+        <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>1.6</version>
+            <scope>test</scope>
+        </dependency>
         <!-- compare: commons-pool2 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
             <version>2.12.1</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- compare: fast-object-pool -->
+        <dependency>
+            <groupId>cn.danielw</groupId>
+            <artifactId>fast-object-pool</artifactId>
+            <version>2.2.1</version>
             <scope>test</scope>
         </dependency>
         <!-- compare: frogspawn -->
@@ -140,6 +154,27 @@
             <groupId>cn.nextop</groupId>
             <artifactId>lite-pool</artifactId>
             <version>1.0.0-RC3</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- compare: kbop -->
+        <dependency>
+            <groupId>org.pacesys</groupId>
+            <artifactId>kbop</artifactId>
+            <version>1.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- compare: objectpool -->
+        <dependency>
+            <groupId>nf.fr.eraasoft</groupId>
+            <artifactId>objectpool</artifactId>
+            <version>1.1.2</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- compare: stormpot -->
+        <dependency>
+            <groupId>com.github.chrisvest</groupId>
+            <artifactId>stormpot</artifactId>
+            <version>2.4.2</version>
             <scope>test</scope>
         </dependency>
         <!-- compare: vibur-object-pool -->
