--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,12 @@
             <artifactId>objectpool</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <!-- recall -->
+        <dependency>
+            <groupId>com.aitusoftware</groupId>
+            <artifactId>recall-store</artifactId>
+            <version>1.1.0</version>
+        </dependency>
         <!-- compare: simple-pool -->
         <dependency>
             <groupId>com.github.robtimus</groupId>
